samples/_failures_safe/1761624143_a1e320_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_583b25df.c: In function ‘main’:
./samples/SAFE/__tmp_583b25df.c:148:5: error: expected declaration or statement at end of input
  148 |     print_matrix(&mat1);
      |     ^~~~~~~~~~~~
